feat: 重构项目到模型层案件管理模块